# game-members-home-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Project-Description.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  dev-deploy.yml  pr-check.yml
app/: main.py
app/api/: deps.py  role.py  router.py
app/api/routers/: __init__.py  address_router.py  admin_banner_router.py  admin_category_router.py  admin_community_router.py  admin_coupon_router.py  admin_log_router.py  admin_merchant_router.py  admin_product_router.py  admin_report_router.py  admin_review_router.py  admin_router.py  admin_user_router.py  auth_router.py  cart_router.py  category_router.py  common_router.py  community_router.py  coupon_router.py  favorite_router.py  merchant_community_router.py  merchant_promotion_router.py  merchant_router.py  merchant_statistics_router.py  message_router.py  notification.py  order_router.py  product_router.py  report_router.py  review_router.py  user_router.py
app/common/: constants.py  enums.py  errors.py  utils.py
app/core/: config.py  lifespan.py  websocket_manager.py
app/database/: __init__.py  base.py  init_game_member_hub.sql  seed_data.sql  session.py  table_structure_patch.py
app/database/mongodb/: __init__.py  base_entity.py  session.py
app/database/pgsql/: __init__.py  base_entity.py  init_game_member_home.sql  session.py  table_structure_patch.py
app/entity/: __init__.py  addresses.py  cart_items.py  carts.py  categories.py  comments.py  community_groups.py  favorites.py  group_members.py  merchants.py  messages.py  order_items.py  orders.py  payments.py  posts.py  product_categories.py  products.py  promotion_products.py  promotions.py  users.py
app/entity/mongodb/: __init__.py  audit_logs.py  comments.py  likes.py  messages.py  notifications.py  product_reviews.py  search_histories.py  user_activities.py
app/entity/pgsql/: __init__.py  addresses.py  admin_logs.py  banners.py  cart_items.py  carts.py  categories.py  community_groups.py  coupons.py  favorites.py  group_members.py  merchants.py  notifications.py  order_items.py  order_logistics.py  order_refunds.py  orders.py  payments.py  point_logs.py  posts.py  product_categories.py  products.py  promotion_products.py  promotions.py  user_coupons.py  user_reports.py  users.py
app/middleware/: exception_handlers.py  security.py
app/model/: __init__.py  auth.py  common.py  response.py  user.py
app/models/: addresses.py  cart_items.py  carts.py  categories.py  comments.py  community_groups.py  favorites.py  group_members.py  merchants.py  messages.py  order_items.py  orders.py  payments.py  posts.py  product_categories.py  products.py  promotion_products.py  promotions.py  users.py
app/redis/: __init__.py  session.py
app/repo/: __init__.py  addresses_repo.py  admin_community_repo.py  admin_log_repo.py  admin_products_repo.py  admin_stats_repo.py  admin_users_repo.py  banners_repo.py  carts_repo.py  categories_repo.py  community_repo.py  coupons_repo.py  favorites_repo.py  merchants_repo.py  messages_repo.py  notifications_repo.py  order_logistics_repo.py  order_refunds_repo.py  orders_repo.py  point_logs_repo.py  products_repo.py  promotions_repo.py  reports_repo.py  reviews_repo.py  statistics_repo.py  users_repo.py
app/schemas/: __init__.py  address.py  admin.py  auth.py  banner.py  cart.py  category.py  common.py  community.py  coupon.py  favorite.py  logistics.py  merchant.py  message.py  notification.py  order.py  order_refund.py  product.py  promotion.py  report.py  response.py  review.py  statistics.py  user.py
app/services/: __init__.py  address_service.py  admin_service.py  auth_service.py  banner_service.py  captcha_service.py  cart_service.py  category_service.py  community_service.py  coupon_service.py  email_service.py  favorite_service.py  logistics_service.py  merchant_service.py  message_service.py  notification_service.py  order_refund_service.py  order_service.py  point_service.py  product_service.py  promotion_service.py  redis_stock_service.py  report_service.py  review_service.py  statistics_service.py  user_service.py
app/tasks/: broker.py  celery_worker.py  tasks.py
app/tests/: captcha_test.py  env_test.py  error_response_test.py  log_test.py  member_points_test.py  order_refunds_test.py  redis_session_test.py  redis_stock_service_test.py  redis_test.py  request_args_test.py  statistics_test.py
app/utils/: __init__.py  captcha_util.py  common.py  operation_lock.py  password_util.py  rate_limit.py  redis_cache.py  redis_lock.py  time.py  token_util.py  validutil.py
scripts/: create_admin.py  init_popularity.py
