[project]
name = "game-members-home-system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhenyu", email = "huangzhenyu65@gmail.com"},
]
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.124.4",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "starlette==0.50.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.38.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "black>=23.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.1",
]

[tool.pdm]
distribution = false

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
strict_optional = true
exclude = ["app/tests/"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
