[project]
name = "game-members-home-system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhenyu", email = "huangzhenyu65@gmail.com"},
]
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.124.4",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "starlette==0.50.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.38.0",
    "SQLAlchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "annotated-doc==0.0.3",
    "anyio==4.11.0",
    "anysqlite==0.0.5",
    "argcomplete==3.6.3",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "dep-logic==0.5.2",
    "distlib==0.4.0",
    "fastapi==0.121.1",
    "filelock==3.20.0",
    "findpython==0.7.1",
    "hishel==0.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "id==1.5.0",
    "installer==0.7.0",
    "Jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "msgpack==1.1.2",
    "packaging==25.0",
    "pbs-installer==2025.10.31",
    "pdm==2.26.1",
    "pipx==1.8.0",
    "platformdirs==4.5.0",
    "pydantic==2.12.4",
    "Pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "resolvelib==1.2.1",
    "rich==14.2.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "starlette==0.49.3",
    "tomlkit==0.13.3",
    "truststore==0.10.4",
    "unearth==0.18.1",
    "urllib3==2.5.0",
    "userpath==1.9.2",
    "virtualenv==20.35.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "black>=23.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
]

[tool.pdm]
distribution = false

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
strict_optional = true
exclude = ["app/tests/"]
explicit_package_bases = true
files = ["app"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
