
[project]
dependencies = [
    "fastapi==0.124.4",
    "uvicorn==0.38.0",
    "pydantic>=2.12.5",
    "starlette==0.50.0",
    "anyio==4.12.0",
    "h11==0.16.0",
    "typing-extensions==4.15.0",
    "annotated-types==0.7.0",
    "typing-inspection==0.4.2",
    "colorama==0.4.6",
    "click==8.3.1",
    "idna==3.11",
    "python-dotenv==1.2.1",
    "SQLAlchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "email-validator>=2.3.0",
    "redis>=7.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "black==24.10.0",
    "ruff==0.6.8",
    "mypy==1.19.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.25.0",
    "types-python-jose>=3.5.0.20250531",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.check]
pdm_version = ">=2.26.1"

[[tool.pdm.sources]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
type = "index"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
strict_optional = true
exclude = ["app/tests/"]
explicit_package_bases = true
files = ["app"]
plugins = ["sqlalchemy.ext.mypy.plugin"]
